<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical">
              <include layout="@layout/action_bar"/>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="24sp"
              android:textStyle="bold"
              android:layout_marginTop="20dp"
              android:layout_marginLeft="30dp"
              android:textColor="@color/text_bg"
              android:text="@string/forget_pass"/>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="15dp"
                  android:orientation="horizontal">
        <TextView android:layout_width="0dp"
                  android:layout_weight="1"
                  android:id="@+id/rl_add_tips"
                  android:layout_height="wrap_content"
                  android:text="+86"
                  android:layout_marginLeft="30dp"
                  android:textColor="@color/text_bg"
                  android:textSize="22sp"/>
        <EditText android:layout_width="0dp"
                  android:layout_weight="5"
                  android:id="@+id/et_phone"
                  android:lines="1"
                  android:hint="@string/input_phone_tips"
                  android:layout_toRightOf="@+id/rl_add_tips"
                  android:layout_toLeftOf="@+id/cancle"
                  android:background="@null"
                  android:layout_height="25dp"/>
        <TextView android:layout_width="0dp"
                  android:layout_weight="1"
                  android:id="@+id/cancle"
                  android:layout_height="wrap_content"
                  android:gravity="center"
                  android:layout_toRightOf="@+id/et_phone"
                  android:textColor="@color/text_bg"
                  android:textSize="22sp"/>
    </LinearLayout>
    <ImageView android:layout_width="match_parent"
               android:layout_height="0.5dp"
               android:layout_marginLeft="30dp"
               android:layout_marginRight="15dp"
               android:layout_marginTop="10dp"
               android:background="@color/line_color"/>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="40dp"
                  android:orientation="horizontal">
        <EditText android:layout_width="0dp"
                  android:layout_weight="5"
                  android:id="@+id/et_credit_num"
                  android:lines="1"
                  android:hint="@string/input_credit_num"
                  android:layout_marginLeft="30dp"
                  android:inputType="number"
                  android:layout_toRightOf="@+id/rl_add_tips"
                  android:layout_toLeftOf="@+id/cancle"
                  android:background="@null"
                  android:layout_height="25dp"/>
        <TextView android:layout_width="0dp"
                  android:layout_weight="1.5"
                  android:id="@+id/tv_getcredit"
                  android:layout_height="wrap_content"
                  android:text="@string/get_credit"
                  android:layout_toRightOf="@+id/et_credit_num"
                  android:textColor="@color/password_tips"
                  android:textSize="14sp"/>
    </LinearLayout>
    <ImageView android:id="@+id/line_credit"
               android:layout_width="match_parent"
               android:layout_height="0.5dp"
               android:layout_marginLeft="30dp"
               android:layout_marginRight="15dp"
               android:layout_marginTop="10dp"
               android:background="@color/line_color"/>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="40dp"
                  android:orientation="horizontal">
        <EditText android:layout_width="0dp"
                  android:layout_weight="5"
                  android:id="@+id/et_password"
                  android:lines="1"
                  android:hint="@string/input_password_tips"
                  android:layout_marginLeft="30dp"
                  android:inputType="textPassword"
                  android:layout_toRightOf="@+id/rl_add_tips"
                  android:layout_toLeftOf="@+id/cancle"
                  android:background="@null"
                  android:layout_height="wrap_content"/>
        <TextView android:layout_width="0dp"
                  android:layout_weight="1"
                  android:layout_height="wrap_content"
                  android:layout_toRightOf="@+id/et_password"
                  android:textColor="@color/text_bg"
                  android:textSize="22sp"/>
    </LinearLayout>
    <ImageView android:layout_width="match_parent"
               android:layout_height="0.5dp"
               android:layout_marginLeft="30dp"
               android:layout_marginRight="15dp"
               android:layout_marginTop="10dp"
               android:background="@color/line_color"/>
    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content">
        <Button android:layout_width="match_parent"
                android:background="@drawable/login_btn_bg"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="40dp"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/ensure"
                android:layout_height="45dp"/>
    </RelativeLayout>
</LinearLayout>